--- a/New folder/responsive.css
+++ b/New folder/responsive.css
@@ -34,6 +34,10 @@
         text-align: center;
         margin-top: 20px;
     }
+    .footer-right {
+       
+        width: 100%;
+    }
 }
 
 /* ==========================================850=============================== */
@@ -70,6 +74,10 @@
     }
     .blog-left-notification {
       
+        width: 100%;
+    }
+    .footer-right {
+     
         width: 100%;
     }
 }
